[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Data/OpenSans2.tres" type="DynamicFont" id=2]
[ext_resource path="res://Data/notes2.tres" type="DynamicFont" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Container" type="HBoxContainer" parent="."]
margin_right = 400.0
margin_bottom = 175.0
rect_min_size = Vector2( 400, 175 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BPM" type="VBoxContainer" parent="Container"]
margin_left = 8.0
margin_right = 133.0
margin_bottom = 175.0
alignment = 1

[node name="Title" type="Label" parent="Container/BPM"]
margin_top = 30.0
margin_right = 125.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 40 )
text = "BPM"
align = 1
valign = 1

[node name="Sub" type="Label" parent="Container/BPM"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 74.0
margin_right = 125.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Beats Per Minute"
align = 1

[node name="LineEdit" type="LineEdit" parent="Container/BPM"]
margin_top = 95.0
margin_right = 125.0
margin_bottom = 145.0
rect_min_size = Vector2( 125, 50 )
align = 1
max_length = 8

[node name="Time" type="VBoxContainer" parent="Container"]
margin_left = 137.0
margin_right = 262.0
margin_bottom = 175.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Container/Time"]
margin_top = 30.0
margin_right = 125.0
margin_bottom = 70.0
alignment = 1

[node name="Button" type="Button" parent="Container/Time/HBoxContainer"]
margin_left = 39.0
margin_right = 85.0
margin_bottom = 40.0
rect_min_size = Vector2( 46, 40 )
text = "Ms"

[node name="Sub" type="Label" parent="Container/Time"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 74.0
margin_right = 125.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Milliseconds"
align = 1

[node name="LineEdit" type="LineEdit" parent="Container/Time"]
margin_top = 95.0
margin_right = 125.0
margin_bottom = 145.0
rect_min_size = Vector2( 125, 50 )
align = 1
max_length = 8

[node name="Hz" type="VBoxContainer" parent="Container"]
margin_left = 266.0
margin_right = 391.0
margin_bottom = 175.0
alignment = 1

[node name="Title" type="Label" parent="Container/Hz"]
margin_top = 30.0
margin_right = 125.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 40 )
text = "Hz"
align = 1
valign = 1

[node name="Sub" type="Label" parent="Container/Hz"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_top = 74.0
margin_right = 125.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 2 )
text = "Hertz"
align = 1

[node name="LineEdit" type="LineEdit" parent="Container/Hz"]
margin_top = 95.0
margin_right = 125.0
margin_bottom = 145.0
rect_min_size = Vector2( 125, 50 )
align = 1
max_length = 8

[node name="Error" type="Label" parent="."]
visible = false
modulate = Color( 0.784314, 0, 0, 1 )
margin_top = 150.0
margin_right = 400.0
margin_bottom = 167.0
rect_min_size = Vector2( 400, 10 )
custom_fonts/font = ExtResource( 2 )
text = "Please enter a valid numeric value (0, 0.5)"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Speed" type="VBoxContainer" parent="."]
margin_left = 95.0
margin_top = 160.0
margin_right = 305.0
margin_bottom = 313.0
rect_min_size = Vector2( 220, 150 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Speed"]
margin_top = 27.0
margin_right = 220.0
margin_bottom = 47.0
rect_min_size = Vector2( 200, 20 )
max_value = 4.0
step = 1.0
value = 1.0
scrollable = false

[node name="current" type="Label" parent="Speed"]
margin_top = 51.0
margin_right = 220.0
margin_bottom = 126.0
rect_min_size = Vector2( 200, 75 )
custom_fonts/font = ExtResource( 4 )
text = "q"
align = 1
[connection signal="text_changed" from="Container/BPM/LineEdit" to="." method="BPM_text_changed"]
[connection signal="pressed" from="Container/Time/HBoxContainer/Button" to="." method="switchTimeUnit"]
[connection signal="text_changed" from="Container/Time/LineEdit" to="." method="MS_text_changed"]
[connection signal="text_changed" from="Container/Hz/LineEdit" to="." method="HZ_text_changed"]
[connection signal="value_changed" from="Speed/HSlider" to="." method="set_speed"]
